js_modules/ui-core/src/selection/generated/SelectionAutoCompleteParser.ts
// Generated from dagster-oss/js_modules/ui-core/src/selection/SelectionAutoComplete.g4 by ANTLR 4.13.1

import * as antlr from 'antlr4ng';
import {Token} from 'antlr4ng';

import {SelectionAutoCompleteListener} from './SelectionAutoCompleteListener.js';
import {SelectionAutoCompleteVisitor} from './SelectionAutoCompleteVisitor.js';

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export class SelectionAutoCompleteParser extends antlr.Parser {
  public static readonly AND = 1;
  public static readonly OR = 2;
  public static readonly NOT = 3;
  public static readonly STAR = 4;
  public static readonly PLUS = 5;
  public static readonly DIGITS = 6;
  public static readonly COLON = 7;
  public static readonly LPAREN = 8;
  public static readonly RPAREN = 9;
  public static readonly QUOTED_STRING = 10;
  public static readonly INCOMPLETE_LEFT_QUOTED_STRING = 11;
  public static readonly INCOMPLETE_RIGHT_QUOTED_STRING = 12;
  public static readonly NULL_STRING = 13;
  public static readonly EQUAL = 14;
  public static readonly IDENTIFIER = 15;
  public static readonly UNQUOTED_REJECTED_STRING = 16;
  public static readonly WS = 17;
  public static readonly COMMA = 18;
  public static readonly RULE_start = 0;
  public static readonly RULE_expr = 1;
  public static readonly RULE_traversalAllowedExpr = 2;
  public static readonly RULE_parenthesizedExpr = 3;
  public static readonly RULE_incompleteExpr = 4;
  public static readonly RULE_expressionLessParenthesizedExpr = 5;
  public static readonly RULE_upTraversalExpr = 6;
  public static readonly RULE_downTraversalExpr = 7;
  public static readonly RULE_upTraversalToken = 8;
  public static readonly RULE_downTraversalToken = 9;
  public static readonly RULE_attributeName = 10;
  public static readonly RULE_attributeValue = 11;
  public static readonly RULE_functionName = 12;
  public static readonly RULE_commaToken = 13;
  public static readonly RULE_orToken = 14;
  public static readonly RULE_andToken = 15;
  public static readonly RULE_notToken = 16;
  public static readonly RULE_colonToken = 17;
  public static readonly RULE_leftParenToken = 18;
  public static readonly RULE_rightParenToken = 19;
  public static readonly RULE_attributeValueWhitespace = 20;
  public static readonly RULE_postAttributeValueWhitespace = 21;
  public static readonly RULE_postExpressionWhitespace = 22;
  public static readonly RULE_postNotOperatorWhitespace = 23;
  public static readonly RULE_postLogicalOperatorWhitespace = 24;
  public static readonly RULE_postNeighborTraversalWhitespace = 25;
  public static readonly RULE_postUpwardTraversalWhitespace = 26;
  public static readonly RULE_postDownwardTraversalWhitespace = 27;
  public static readonly RULE_postDigitsWhitespace = 28;
  public static readonly RULE_value = 29;

  public static readonly literalNames = [
    null,
    null,
    null,
    null,
    "'*'",
    "'+'",
    null,
    "':'",
    "'('",
    "')'",
    null,
    null,
    null,
    "'<null>'",
    "'='",
    null,
    null,
    null,
    "','",
  ];

  public static readonly symbolicNames = [
    null,
    'AND',
    'OR',
    'NOT',
    'STAR',
    'PLUS',
    'DIGITS',
    'COLON',
    'LPAREN',
    'RPAREN',
    'QUOTED_STRING',
    'INCOMPLETE_LEFT_QUOTED_STRING',
    'INCOMPLETE_RIGHT_QUOTED_STRING',
    'NULL_STRING',
    'EQUAL',
    'IDENTIFIER',
    'UNQUOTED_REJECTED_STRING',
    'WS',
    'COMMA',
  ];
  public static readonly ruleNames = [
    'start',
    'expr',
    'traversalAllowedExpr',
    'parenthesizedExpr',
    'incompleteExpr',
    'expressionLessParenthesizedExpr',
    'upTraversalExpr',
    'downTraversalExpr',
    'upTraversalToken',
    'downTraversalToken',
    'attributeName',
    'attributeValue',
    'functionName',
    'commaToken',
    'orToken',
    'andToken',
    'notToken',
    'colonToken',
    'leftParenToken',
    'rightParenToken',
    'attributeValueWhitespace',
    'postAttributeValueWhitespace',
    'postExpressionWhitespace',
    'postNotOperatorWhitespace',
    'postLogicalOperatorWhitespace',
    'postNeighborTraversalWhitespace',
    'postUpwardTraversalWhitespace',
    'postDownwardTraversalWhitespace',
    'postDigitsWhitespace',
    'value',
  ];

  public get grammarFileName(): string {
    return 'SelectionAutoComplete.g4';
  }
  public get literalNames(): (string | null)[] {
    return SelectionAutoCompleteParser.literalNames;
  }
  public get symbolicNames(): (string | null)[] {
    return SelectionAutoCompleteParser.symbolicNames;
  }
  public get ruleNames(): string[] {
    return SelectionAutoCompleteParser.ruleNames;
  }
  public get serializedATN(): number[] {
    return SelectionAutoCompleteParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): antlr.FailedPredicateException {
    return new antlr.FailedPredicateException(this, predicate, message);
  }

  public constructor(input: antlr.TokenStream) {
    super(input);
    this.interpreter = new antlr.ParserATNSimulator(
      this,
      SelectionAutoCompleteParser._ATN,
      SelectionAutoCompleteParser.decisionsToDFA,
      new antlr.PredictionContextCache(),
    );
  }
  public start(): StartContext {
    let localContext = new StartContext(this.context, this.state);
    this.enterRule(localContext, 0, SelectionAutoCompleteParser.RULE_start);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 60;
        this.expr(0);
        this.state = 61;
        this.match(SelectionAutoCompleteParser.EOF);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }

  public expr(): ExprContext;
  public expr(_p: number): ExprContext;
  public expr(_p?: number): ExprContext {
    if (_p === undefined) {
      _p = 0;
    }

    let parentContext = this.context;
    let parentState = this.state;
    let localContext = new ExprContext(this.context, parentState);
    let previousContext = localContext;
    let _startState = 2;
    this.enterRecursionRule(localContext, 2, SelectionAutoCompleteParser.RULE_expr, _p);
    try {
      let alternative: number;
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 88;
        this.errorHandler.sync(this);
        switch (this.interpreter.adaptivePredict(this.tokenStream, 0, this.context)) {
          case 1:
            {
              localContext = new TraversalAllowedExpressionContext(localContext);
              this.context = localContext;
              previousContext = localContext;

              this.state = 64;
              this.traversalAllowedExpr();
            }
            break;
          case 2:
            {
              localContext = new UpAndDownTraversalExpressionContext(localContext);
              this.context = localContext;
              previousContext = localContext;
              this.state = 65;
              this.upTraversalExpr();
              this.state = 66;
              this.traversalAllowedExpr();
              this.state = 67;
              this.downTraversalExpr();
            }
            break;
          case 3:
            {
              localContext = new UpTraversalExpressionContext(localContext);
              this.context = localContext;
              previousContext = localContext;
              this.state = 69;
              this.upTraversalExpr();
              this.state = 70;
              this.traversalAllowedExpr();
            }
            break;
          case 4:
            {
              localContext = new DownTraversalExpressionContext(localContext);
              this.context = localContext;
              previousContext = localContext;
              this.state = 72;
              this.traversalAllowedExpr();
              this.state = 73;
              this.downTraversalExpr();
            }
            break;
          case 5:
            {
              localContext = new NotExpressionContext(localContext);
              this.context = localContext;
              previousContext = localContext;
              this.state = 75;
              this.notToken();
              this.state = 76;
              this.postNotOperatorWhitespace();
              this.state = 77;
              this.expr(11);
            }
            break;
          case 6:
            {
              localContext = new IncompleteNotExpressionContext(localContext);
              this.context = localContext;
              previousContext = localContext;
              this.state = 79;
              this.notToken();
              this.state = 80;
              this.postNotOperatorWhitespace();
            }
            break;
          case 7:
            {
              localContext = new AllExpressionContext(localContext);
              this.context = localContext;
              previousContext = localContext;
              this.state = 82;
              this.match(SelectionAutoCompleteParser.STAR);
              this.state = 83;
              this.postExpressionWhitespace();
            }
            break;
          case 8:
            {
              localContext = new UnmatchedValueContext(localContext);
              this.context = localContext;
              previousContext = localContext;
              this.state = 84;
              this.value();
              this.state = 85;
              this.postExpressionWhitespace();
            }
            break;
          case 9:
            {
              localContext = new CommaExpressionWrapper3Context(localContext);
              this.context = localContext;
              previousContext = localContext;
              this.state = 87;
              this.commaToken();
            }
            break;
        }
        this.context!.stop = this.tokenStream.LT(-1);
        this.state = 116;
        this.errorHandler.sync(this);
        alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
        while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
          if (alternative === 1) {
            if (this.parseListeners != null) {
              this.triggerExitRuleEvent();
            }
            previousContext = localContext;
            {
              this.state = 114;
              this.errorHandler.sync(this);
              switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context)) {
                case 1:
                  {
                    localContext = new AndExpressionContext(
                      new ExprContext(parentContext, parentState),
                    );
                    this.pushNewRecursionContext(
                      localContext,
                      _startState,
                      SelectionAutoCompleteParser.RULE_expr,
                    );
                    this.state = 90;
                    if (!this.precpred(this.context, 10)) {
                      throw this.createFailedPredicateException('this.precpred(this.context, 10)');
                    }
                    this.state = 91;
                    this.andToken();
                    this.state = 92;
                    this.postLogicalOperatorWhitespace();
                    this.state = 93;
                    this.expr(11);
                  }
                  break;
                case 2:
                  {
                    localContext = new OrExpressionContext(
                      new ExprContext(parentContext, parentState),
                    );
                    this.pushNewRecursionContext(
                      localContext,
                      _startState,
                      SelectionAutoCompleteParser.RULE_expr,
                    );
                    this.state = 95;
                    if (!this.precpred(this.context, 9)) {
                      throw this.createFailedPredicateException('this.precpred(this.context, 9)');
                    }
                    this.state = 96;
                    this.orToken();
                    this.state = 97;
                    this.postLogicalOperatorWhitespace();
                    this.state = 98;
                    this.expr(10);
                  }
                  break;
                case 3:
                  {
                    localContext = new CommaExpressionWrapper1Context(
                      new ExprContext(parentContext, parentState),
                    );
                    this.pushNewRecursionContext(
                      localContext,
                      _startState,
                      SelectionAutoCompleteParser.RULE_expr,
                    );
                    this.state = 100;
                    if (!this.precpred(this.context, 8)) {
                      throw this.createFailedPredicateException('this.precpred(this.context, 8)');
                    }
                    this.state = 101;
                    this.commaToken();
                    this.state = 102;
                    this.expr(9);
                  }
                  break;
                case 4:
                  {
                    localContext = new IncompleteAndExpressionContext(
                      new ExprContext(parentContext, parentState),
                    );
                    this.pushNewRecursionContext(
                      localContext,
                      _startState,
                      SelectionAutoCompleteParser.RULE_expr,
                    );
                    this.state = 104;
                    if (!this.precpred(this.context, 7)) {
                      throw this.createFailedPredicateException('this.precpred(this.context, 7)');
                    }
                    this.state = 105;
                    this.andToken();
                    this.state = 106;
                    this.postLogicalOperatorWhitespace();
                  }
                  break;
                case 5:
                  {
                    localContext = new IncompleteOrExpressionContext(
                      new ExprContext(parentContext, parentState),
                    );
                    this.pushNewRecursionContext(
                      localContext,
                      _startState,
                      SelectionAutoCompleteParser.RULE_expr,
                    );
                    this.state = 108;
                    if (!this.precpred(this.context, 6)) {
                      throw this.createFailedPredicateException('this.precpred(this.context, 6)');
                    }
                    this.state = 109;
                    this.orToken();
                    this.state = 110;
                    this.postLogicalOperatorWhitespace();
                  }
                  break;
                case 6:
                  {
                    localContext = new CommaExpressionWrapper2Context(
                      new ExprContext(parentContext, parentState),
                    );
                    this.pushNewRecursionContext(
                      localContext,
                      _startState,
                      SelectionAutoCompleteParser.RULE_expr,
                    );
                    this.state = 112;
                    if (!this.precpred(this.context, 5)) {
                      throw this.createFailedPredicateException('this.precpred(this.context, 5)');
                    }
                    this.state = 113;
                    this.commaToken();
                  }
                  break;
              }
            }
          }
          this.state = 118;
          this.errorHandler.sync(this);
          alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.unrollRecursionContexts(parentContext);
    }
    return localContext;
  }
  public traversalAllowedExpr(): TraversalAllowedExprContext {
    let localContext = new TraversalAllowedExprContext(this.context, this.state);
    this.enterRule(localContext, 4, SelectionAutoCompleteParser.RULE_traversalAllowedExpr);
    try {
      this.state = 133;
      this.errorHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context)) {
        case 1:
          localContext = new AttributeExpressionContext(localContext);
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 119;
            this.attributeName();
            this.state = 120;
            this.colonToken();
            this.state = 121;
            this.attributeValue();
            this.state = 124;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 3, this.context)) {
              case 1:
                {
                  this.state = 122;
                  this.match(SelectionAutoCompleteParser.EQUAL);
                  this.state = 123;
                  this.attributeValue();
                }
                break;
            }
            this.state = 126;
            this.postAttributeValueWhitespace();
          }
          break;
        case 2:
          localContext = new FunctionCallExpressionContext(localContext);
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 128;
            this.functionName();
            this.state = 129;
            this.parenthesizedExpr();
          }
          break;
        case 3:
          localContext = new TraversalAllowedParenthesizedExpressionContext(localContext);
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 131;
            this.parenthesizedExpr();
          }
          break;
        case 4:
          localContext = new IncompleteExpressionContext(localContext);
          this.enterOuterAlt(localContext, 4);
          {
            this.state = 132;
            this.incompleteExpr();
          }
          break;
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public parenthesizedExpr(): ParenthesizedExprContext {
    let localContext = new ParenthesizedExprContext(this.context, this.state);
    this.enterRule(localContext, 6, SelectionAutoCompleteParser.RULE_parenthesizedExpr);
    try {
      localContext = new ParenthesizedExpressionContext(localContext);
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 135;
        this.leftParenToken();
        this.state = 136;
        this.postLogicalOperatorWhitespace();
        this.state = 137;
        this.expr(0);
        this.state = 138;
        this.rightParenToken();
        this.state = 139;
        this.postExpressionWhitespace();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public incompleteExpr(): IncompleteExprContext {
    let localContext = new IncompleteExprContext(this.context, this.state);
    this.enterRule(localContext, 8, SelectionAutoCompleteParser.RULE_incompleteExpr);
    let _la: number;
    try {
      this.state = 183;
      this.errorHandler.sync(this);
      switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context)) {
        case 1:
          localContext = new IncompleteAttributeExpressionMissingSecondValueContext(localContext);
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 141;
            this.attributeName();
            this.state = 142;
            this.colonToken();
            this.state = 143;
            this.attributeValue();
            this.state = 144;
            this.match(SelectionAutoCompleteParser.EQUAL);
            this.state = 145;
            this.attributeValueWhitespace();
          }
          break;
        case 2:
          localContext = new IncompleteAttributeExpressionMissingValueContext(localContext);
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 147;
            this.attributeName();
            this.state = 148;
            this.colonToken();
            this.state = 149;
            this.attributeValueWhitespace();
          }
          break;
        case 3:
          localContext = new ExpressionlessFunctionExpressionContext(localContext);
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 151;
            this.functionName();
            this.state = 152;
            this.expressionLessParenthesizedExpr();
          }
          break;
        case 4:
          localContext = new UnclosedExpressionlessFunctionExpressionContext(localContext);
          this.enterOuterAlt(localContext, 4);
          {
            this.state = 154;
            this.functionName();
            this.state = 155;
            this.leftParenToken();
            this.state = 156;
            this.postLogicalOperatorWhitespace();
          }
          break;
        case 5:
          localContext = new UnclosedFunctionExpressionContext(localContext);
          this.enterOuterAlt(localContext, 5);
          {
            this.state = 158;
            this.functionName();
            this.state = 159;
            this.leftParenToken();
            this.state = 160;
            this.expr(0);
          }
          break;
        case 6:
          localContext = new UnclosedParenthesizedExpressionContext(localContext);
          this.enterOuterAlt(localContext, 6);
          {
            this.state = 162;
            this.leftParenToken();
            this.state = 163;
            this.postLogicalOperatorWhitespace();
            this.state = 164;
            this.expr(0);
          }
          break;
        case 7:
          localContext = new ExpressionlessParenthesizedExpressionWrapperContext(localContext);
          this.enterOuterAlt(localContext, 7);
          {
            this.state = 166;
            this.expressionLessParenthesizedExpr();
          }
          break;
        case 8:
          localContext = new UnclosedExpressionlessParenthesizedExpressionContext(localContext);
          this.enterOuterAlt(localContext, 8);
          {
            this.state = 167;
            this.leftParenToken();
            this.state = 168;
            this.postLogicalOperatorWhitespace();
          }
          break;
        case 9:
          localContext = new IncompletePlusTraversalExpressionContext(localContext);
          this.enterOuterAlt(localContext, 9);
          {
            this.state = 171;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 6) {
              {
                this.state = 170;
                this.match(SelectionAutoCompleteParser.DIGITS);
              }
            }

            this.state = 173;
            this.match(SelectionAutoCompleteParser.PLUS);
            this.state = 174;
            this.postNeighborTraversalWhitespace();
          }
          break;
        case 10:
          localContext = new IncompletePlusTraversalExpressionMissingValueContext(localContext);
          this.enterOuterAlt(localContext, 10);
          {
            this.state = 175;
            this.match(SelectionAutoCompleteParser.PLUS);
            this.state = 176;
            this.value();
            this.state = 177;
            this.postExpressionWhitespace();
          }
          break;
        case 11:
          localContext = new IncompleteAttributeExpressionMissingKeyContext(localContext);
          this.enterOuterAlt(localContext, 11);
          {
            this.state = 179;
            this.colonToken();
            this.state = 180;
            this.attributeValue();
            this.state = 181;
            this.postExpressionWhitespace();
          }
          break;
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public expressionLessParenthesizedExpr(): ExpressionLessParenthesizedExprContext {
    let localContext = new ExpressionLessParenthesizedExprContext(this.context, this.state);
    this.enterRule(
      localContext,
      10,
      SelectionAutoCompleteParser.RULE_expressionLessParenthesizedExpr,
    );
    try {
      localContext = new ExpressionlessParenthesizedExpressionContext(localContext);
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 185;
        this.leftParenToken();
        this.state = 186;
        this.postLogicalOperatorWhitespace();
        this.state = 187;
        this.rightParenToken();
        this.state = 188;
        this.postExpressionWhitespace();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public upTraversalExpr(): UpTraversalExprContext {
    let localContext = new UpTraversalExprContext(this.context, this.state);
    this.enterRule(localContext, 12, SelectionAutoCompleteParser.RULE_upTraversalExpr);
    try {
      localContext = new UpTraversalContext(localContext);
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 190;
        this.upTraversalToken();
        this.state = 191;
        this.postUpwardTraversalWhitespace();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public downTraversalExpr(): DownTraversalExprContext {
    let localContext = new DownTraversalExprContext(this.context, this.state);
    this.enterRule(localContext, 14, SelectionAutoCompleteParser.RULE_downTraversalExpr);
    try {
      localContext = new DownTraversalContext(localContext);
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 193;
        this.downTraversalToken();
        this.state = 194;
        this.postDownwardTraversalWhitespace();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public upTraversalToken(): UpTraversalTokenContext {
    let localContext = new UpTraversalTokenContext(this.context, this.state);
    this.enterRule(localContext, 16, SelectionAutoCompleteParser.RULE_upTraversalToken);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 197;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 6) {
          {
            this.state = 196;
            this.match(SelectionAutoCompleteParser.DIGITS);
          }
        }
